# atlasprotocol

./: .env.example  .eslintrc.json  .gitignore  .prettierrc.json  ONBOARDING_FLOW.md  README.md  apphosting.yaml  ecosystem.config.js  export_deposits_xlsx.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
backend/: .env.devnet.example  .env.local.dev  .env.testnet.example  README.md  _env.local  cache.js  coin.js  constants.js  deploy.sh  ecosystem.config.js  generate-block-cursor.js  generate-deposit-signed-tx.js  generate-evm-derive-address.js  generate-redemp-signed-tx.js  network.chain.config.js  package-lock.json  package.json  pnpm-lock.yaml  reprocess-records.js  rollback.js  server.js  (+4 more)
contract/: Cargo.toml  Makefile  README.md  build.sh  chain_chains.json  chain_chains_manual.json  deploy_new_environment.js  update_deposit.sh
contract/artifacts/: atBTC.abi
contract/res/: atlas_protocol.wasm
contract/src/: .gitignore  atlas.rs  chain_chains.atbtc_signet_20250316.json  chain_chains.atlas_audit_v20241223.json  chain_chains.dev.audit.json  chain_chains.dev.json  chain_chains.dev.tuannguyen.json  chain_chains.dev.velar3.json  chain_chains.json  chain_chains.signet.json  chain_chains.testnet.json  chain_configs.rs  constants.rs  global_params.rs  lib.rs  near_cli_readme.txt  state_cleanup.txt
contract/src/modules/: admin.rs  balance.rs  bridging.rs  btc_pubkey.rs  deposits.rs  fees.rs  migrate.rs  mod.rs  redemptions.rs  signer.rs  structs.rs  utils.rs  validation.rs
contract/tests/: README.md  admin_tests.rs  create_mint_abtc_signed_tx_tests.rs  fees_tests.rs  insert_deposit_tests.rs  insert_redemption_tests.rs  retrieve_deposit_tests.rs  retrieve_redemption_tests.rs  update_deposit_tests.rs  update_redemption_tests.rs  update_withdraw_fail_deposit_status.rs  utils_tests.rs  validation_tests.rs  withdraw_fail_deposit_tests.rs  withdraw_faile_deposit_by_btc_tx_hash_tests.rs  withdraw_faile_deposit_tests.rs
contract/tests/integration_tests/: README.md  deposit_flow_tests.rs  main.rs  redemption_flow_tests.rs  setup.rs
contract/tokens/: Cargo.toml  README.md  build.sh
contract/tokens/res/: atbtc.wasm
contract/tokens/solidity_contract/: atBTC.sol
contract/tokens/src/: lib.rs
(+263 files in other folders)
