[package]
name = "atlas_protocol"
version = "0.1.0"
authors = ["Atlas Protocol"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ethers-core = { version = "2.0.14", default-features = false }
near-sdk = "5.3.0"
near-sdk-macros = "5.3.0"
borsh = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
ethabi = "18.0"  
hex = "0.4"
primitive-types = "0.8" 
bitcoin = "0.27"
secp256k1 = "0.21"
omni-transaction = { git = "https://github.com/ilblackdragon/omni-transaction-rs" }


[dev-dependencies]
near-sdk = { version = "5.3.0", features = ["unit-testing"] }
tokio = { version = "1.12.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.2", features = ["custom"]}

[profile.release]
codegen-units = 1
# Tell rustc to optimize for small code size.
debug = false
lto = true
opt-level = "z"
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[[test]]
name = "integration_tests"
path = "tests/integration_tests/main.rs"