[package]
name = "atBTC"
version = "1.0.0"
authors = ["Atlas Protocol"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
serde_json = "1.0"

# This can be removed when near-sdk is updated
# Unfortuantely, this crate was yanked by the author and this is needed
[patch.crates-io]
parity-secp256k1 = { git = 'https://github.com/paritytech/rust-secp256k1.git' }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
debug = false
panic = "abort"
overflow-checks = true